k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: libro-clases
  labels:
    name: libro-clases
