k8s/bff-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  namespace: libro-clases
spec:
  replicas: 2
  selector: { matchLabels: { app: bff } }
  template:
    metadata: { labels: { app: bff } }
    spec:
      containers:
        - name: bff
          image: registry.local/bff:1.0.0
          ports: [{ containerPort: 8080 }]
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8080 }
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata: { name: bff, namespace: libro-clases }
spec:
  selector: { app: bff }
  ports: [{ port: 8080, targetPort: 8080 }]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: libro-clases
spec:
  replicas: 2
  selector: { matchLabels: { app: frontend } }
  template:
    metadata: { labels: { app: frontend } }
    spec:
      containers:
        - name: frontend
          image: registry.local/frontend:1.0.0
          ports: [{ containerPort: 80 }]
---
apiVersion: v1
kind: Service
metadata: { name: frontend, namespace: libro-clases }
spec:
  selector: { app: frontend }
  ports: [{ port: 80, targetPort: 80 }]
