k8s/kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: libro-clases
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels: { app: kafka }
  template:
    metadata:
      labels: { app: kafka }
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.5.0
          ports: [{ containerPort: 9092 }]
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: libro-clases
spec:
  selector: { app: kafka }
  clusterIP: None
  ports:
    - port: 9092
      targetPort: 9092
