k8s/ms-academico.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-academico
  namespace: libro-clases
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxUnavailable: 0, maxSurge: 1 }
  selector:
    matchLabels: { app: ms-academico }
  template:
    metadata:
      labels: { app: ms-academico }
    spec:
      containers:
        - name: ms-academico
          image: registry.local/ms-academico:1.0.0
          ports: [{ containerPort: 8083 }]
          resources:
            requests: { memory: "384Mi", cpu: "250m" }
            limits:   { memory: "768Mi", cpu: "750m" }
---
apiVersion: v1
kind: Service
metadata:
  name: ms-academico
  namespace: libro-clases
spec:
  selector: { app: ms-academico }
  ports:
    - port: 8083
      targetPort: 8083
