k8s/ms-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-auth
  namespace: libro-clases
spec:
  replicas: 2
  selector:
    matchLabels: { app: ms-auth }
  template:
    metadata:
      labels: { app: ms-auth }
    spec:
      containers:
        - name: ms-auth
          image: registry.local/ms-auth:1.0.0
          ports: [{ containerPort: 8082 }]
          resources:
            requests: { memory: "256Mi", cpu: "200m" }
            limits:   { memory: "512Mi", cpu: "500m" }
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            initialDelaySeconds: 60
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: ms-auth
  namespace: libro-clases
spec:
  selector: { app: ms-auth }
  ports:
    - port: 8082
      targetPort: 8082
