k8s/ms-mensajeria.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-mensajeria
  namespace: libro-clases
spec:
  replicas: 2
  selector: { matchLabels: { app: ms-mensajeria } }
  template:
    metadata: { labels: { app: ms-mensajeria } }
    spec:
      containers:
        - name: ms-mensajeria
          image: registry.local/ms-mensajeria:1.0.0
          ports: [{ containerPort: 8085 }]
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8085 }
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8085 }
            initialDelaySeconds: 60
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: ms-mensajeria
  namespace: libro-clases
spec:
  selector: { app: ms-mensajeria }
  ports: [{ port: 8085, targetPort: 8085 }]
