k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: libro-clases
spec:
  replicas: 2
  selector:
    matchLabels: { app: api-gateway }
  template:
    metadata:
      labels: { app: api-gateway }
    spec:
      containers:
        - name: api-gateway
          image: registry.local/api-gateway:1.0.0
          ports: [{ containerPort: 8081 }]
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: libro-clases
spec:
  selector: { app: api-gateway }
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libro-clases-ingress
  namespace: libro-clases
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts: [libro.colegio.local]
      secretName: tls-libro-clases
  rules:
    - host: libro.colegio.local
      http:
        paths:
          - path: /bff
            pathType: Prefix
            backend:
              service:
                name: bff
                port: { number: 8080 }
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port: { number: 80 }
